ARGO-2724 Introduce topology tags/values method
